--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Descubra Busan - Turismo</title>
-  <link rel="stylesheet" href="style.css"> <!-- Adicione um arquivo CSS para estilização -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="page">
@@ -61,9 +61,7 @@
     </section>
 
     <footer>
-      Feito com 
-      <img src="assets/coração.svg" alt="coração fofo">
-      pelo Gabriel Rafhael
+      Feito com <img src="assets/coração.svg" alt="coração fofo"> pelo Gabriel Rafhael
     </footer>
   </div>
 </body>
