mudança style e html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Descubra Busan - Turismo</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> <!-- Adicione um arquivo CSS para estilização -->
 </head>
 <body>
   <div class="page">
@@ -14,7 +14,7 @@
     </header>
 
     <section class="intro">
-      <img src="assets/image.png" alt="Vista panorâmica de Busan, Coreia do Sul">
+      <img src="assets/image.png" alt="Vista panorâmica de Busan, Coreia do Sul" class="intro-image">
       <p>
         Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda maior cidade da Coreia do Sul e descobrimos suas incríveis atrações culturais e gastronômicas.
       </p>
@@ -61,7 +61,9 @@
     </section>
 
     <footer>
-      Feito com <img src="assets/coração.svg" alt="coração fofo"> pelo Gabriel Rafhael
+      Feito com 
+      <img src="assets/coração.svg" alt="Coração fofo">
+      pelo Gabriel Rafhael
     </footer>
   </div>
 </body>
